--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 rdflib = "^7.0.0"
+confluent-kafka = "^2.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
