--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ python = "^3.10"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 rdflib = "^7.0.0"
-confluent-kafka = "^2.6.0"
-
+rdf-to-ngsi-ld = {git = "https://github.com/candil-data-fabric/rdf-to-ngsi-ld.git", tag = "1.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
