Add docker-compose-dev.yaml for development

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -9,9 +9,12 @@ services:
       PUBLIC_CONTEXT_BROKER_URL: "http://api-gw:1026/ngsi-ld/v1"
       DOMAIN_ID: "NCSRD"
       ORGANIZATION_ID: "NCSRD"
-      LOGLEVEL: "INFO"
+      LOGLEVEL: "DEBUG"
+    command: "dev --host 0.0.0.0 --port 80"
     ports:
-      - "8000:80"
+      - 8000:80
+    volumes:
+      - ./data_catalog_service:/app/data_catalog_service
     depends_on:
       - orion
   mongo:
