--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "data-catalog-service"
-version = "1.1.2"
+version = "1.2.0"
 description = ""
 authors = ["Ignacio Dominguez Martinez-Casanueva <ignacio.dominguezmartinez@telefonica.com>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ fastapi = {extras = ["standard"], version = "^0.115.0"}
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 rdflib = "^7.0.0"
 rdf-to-ngsi-ld = {git = "https://github.com/candil-data-fabric/rdf-to-ngsi-ld.git", tag = "1.2.2"}
+requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
