--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "data-catalog-service"
-version = "1.3.1"
-description = ""
-authors = ["Ignacio Dominguez Martinez-Casanueva <ignacio.dominguezmartinez@telefonica.com>"]
+version = "1.4.0"
+description = "Component responsible for populating the knowledge graph with metadata based on the aerOS Data Catalog Ontology."
+authors = ["Ignacio Domínguez Martínez-Casanueva <ignacio.dominguezmartinez@telefonica.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 rdflib = "^7.0.0"
 rdf-to-ngsi-ld = {git = "https://github.com/candil-data-fabric/rdf-to-ngsi-ld.git", tag = "1.3.0"}
 requests = "^2.32.3"
+pymongo = "^4.10.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
